--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Page</h1>
+    <h1>Hola</h1>
     <p>This is my page.</p>
   </body>
 </html>
