--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Page</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Hola</h1>
-    <p>This is my page.</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Currículum Vitae</title>
+</head>
+
+<body>
+  <header>
+    <h1>Currículum Vitae</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Educación</a></li>
+      <li><a href="#">Experiencia</a></li>
+      <li><a href="#">Habilidades</a></li>
+      <li><a href="#">Contacto</a></li>
+    </ul>
+  </nav>
+  <section id="informacion-personal">
+    <h2>Información personal</h2>
+    <p>Nombre: <span>Juan Pérez</span></p>
+    <p>Dirección: <span>Calle 123, Ciudad</span></p>
+    <p>Teléfono: <span>+52 123 456 7890</span></p>
+    <p>Correo electrónico: <span>juan.perez@example.com</span></p>
+  </section>
+  <section id="educacion">
+    <h2>Educación</h2>
+    <p>
+    <p>
+      Grado: <span>Licenciatura en Informática</span>
+    </p>
+    Institución: <span>Universidad Nacional Autónoma de México</span>
+    </p>
+    <p>
+      Fechas: <span>2020 - 2023</span>
+    </p>
+  </section>
+  <section id="experiencia">
+    <h2>Experiencia</p>
+      <p>
+        Cargo: <span>Desarrollador de software</span>
+      </p>
+      <p>
+        Empresa: <span>Google</span>
+      </p>
+      <p>
+        Fechas: <span>2023 - Presente</span>
+      </p>
+      <p>
+        Descripción:
+      <ul>
+        <li>Desarrollo de aplicaciones web</li>
+        <li>Mantenimiento de sistemas</li>
+        <li>Trabajo en equipo</li>
+      </ul>
+      </p>
+  </section>
+  <section id="habilidades">
+    <h2>Habilidades</h2>
+    <ul>
+      <li>Lenguajes de programación: Python, JavaScript, Java</li>
+      <li>Bases de datos: MySQL, PostgreSQL</li>
+      <li>Herramientas de desarrollo: Visual Studio Code, Git</li>
+      <li>Otros: Inglés, Portugués</li>
+    </ul>
+  </section>
+  <footer>
+    <p>Copyright © 2023 Juan Pérez</p>
+  </footer>
+</body>
 </html>
