Modificando el index

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
   </nav>
   <section id="informacion-personal">
     <h2>Información personal</h2>
-    <p>Nombre: <span>Juan Pérez</span></p>
+    <p>Nombre: <span>Adrián Litardo</span></p>
     <p>Dirección: <span>Calle 123, Ciudad</span></p>
     <p>Teléfono: <span>+52 123 456 7890</span></p>
-    <p>Correo electrónico: <span>juan.perez@example.com</span></p>
+    <p>Correo electrónico: <span>lalitard@espol.edu.ec</span></p>
   </section>
   <section id="educacion">
     <h2>Educación</h2>
     <p>
     <p>
-      Grado: <span>Licenciatura en Informática</span>
+      Carrera: <span>Ingenieria en Computación</span>
     </p>
-    Institución: <span>Universidad Nacional Autónoma de México</span>
+    Institución: <span>Escuela Superior Politécnica del Litoral</span>
     </p>
     <p>
       Fechas: <span>2020 - 2023</span>
