ingresando curriculum vitae

--- a/index.html
+++ b/index.html
@@ -1,74 +1,169 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>Currículum Vitae</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <metan name="keywords" content="adrian, litardo, GitHub, Curriculum, Vitae, DAWN">
+    <meta name="description" content="Curriculum Vitae of Adrián Litardo">
+    <meta name="author" content="Adrián Litardo; lalitard on GitHub">
+    <title>Curriculum Vitae</title>
+    <!-- Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
 
-<body>
-  <header>
-    <h1>Currículum Vitae</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Educación</a></li>
-      <li><a href="#">Experiencia</a></li>
-      <li><a href="#">Habilidades</a></li>
-      <li><a href="#">Contacto</a></li>
-    </ul>
-  </nav>
-  <section id="informacion-personal">
-    <h2>Información personal</h2>
-    <p>Nombre: <span>Adrián Litardo</span></p>
-    <p>Dirección: <span>Calle 123, Ciudad</span></p>
-    <p>Teléfono: <span>+52 123 456 7890</span></p>
-    <p>Correo electrónico: <span>lalitard@espol.edu.ec</span></p>
-  </section>
-  <section id="educacion">
-    <h2>Educación</h2>
-    <p>
-    <p>
-      Carrera: <span>Ingenieria en Computación</span>
-    </p>
-    Institución: <span>Escuela Superior Politécnica del Litoral</span>
-    </p>
-    <p>
-      Fechas: <span>2020 - 2023</span>
-    </p>
-  </section>
-  <section id="experiencia">
-    <h2>Experiencia</p>
-      <p>
-        Cargo: <span>Desarrollador de software</span>
-      </p>
-      <p>
-        Empresa: <span>Google</span>
-      </p>
-      <p>
-        Fechas: <span>2023 - Presente</span>
-      </p>
-      <p>
-        Descripción:
-      <ul>
-        <li>Desarrollo de aplicaciones web</li>
-        <li>Mantenimiento de sistemas</li>
-        <li>Trabajo en equipo</li>
-      </ul>
-      </p>
-  </section>
-  <section id="habilidades">
-    <h2>Habilidades</h2>
-    <ul>
-      <li>Lenguajes de programación: Python, JavaScript, Java</li>
-      <li>Bases de datos: MySQL, PostgreSQL</li>
-      <li>Herramientas de desarrollo: Visual Studio Code, Git</li>
-      <li>Otros: Inglés, Portugués</li>
-    </ul>
-  </section>
-  <footer>
-    <p>Copyright © 2023 Juan Pérez</p>
+<body class="d-flex flex-column h-100">
+  <main class="flex-shrink-0">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-green">
+      <div class="container px-5">
+        <a class="navbar-brand" href="index.html">Curriculum Vitae</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+            class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">Acerca de Nosotros</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="pricing.html">Precios</a></li>
+            <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Galeria de im&aacute;genes</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Header-->
+    <header class="bg-green py-5">
+      <div class="container px-5">
+        <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-lg-8 col-xl-7 col-xxl-6">
+            <div class="my-5 text-center text-xl-start">
+              <h1 class="display-5 fw-bolder text-white mb-2">Una Academia a tu medida</h1>
+              <p class="lead fw-normal text-white-50 mb-4">Te asesoramos con respecto a tus dudas sobre tareas, trabajos
+                de investigaci&oacute;n, talleres y te preparamos para rendir tus evaluaciones parciales o finales</p>
+              <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                <a class="btn btn-green btn-lg px-4 me-sm-3" href="#features">Empezar</a>
+                <a class="btn btn-outline-green btn-lg px-4" href="#!">Leer m&aacute;s</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+            <img class="img-fluid rounded-3 my-5"
+              src="https://st2.depositphotos.com/3662505/6878/i/450/depositphotos_68789187-stock-photo-students.jpg"
+              alt="..." />
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Features section-->
+    <section class="py-5" id="features">
+      <div class="container px-5 my-5">
+        <div class="row gx-5">
+          <div class="col-lg-4 mb-5 mb-lg-0">
+            <h2 class="fw-bolder mb-0">Una mejor forma de aprender y resolver tus dudas.</h2>
+          </div>
+          <div class="col-lg-8">
+            <div class="row gx-5 row-cols-1 row-cols-md-2">
+              <div class="col mb-5 h-100">
+                <div class="feature bg-light-green bg-gradient text-white rounded-3 mb-3"><i
+                    class="bi bi-collection"></i></div>
+                <h2 class="h5">Clases grabadas</h2>
+                <p class="mb-0">Contamos con contenido en linea para que puedas volver a ver la clase cuando tu quieras.
+                </p>
+              </div>
+              <div class="col mb-5 h-100">
+                <div class="feature bg-light-green bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i>
+                </div>
+                <h2 class="h5">Material de estudio</h2>
+                <p class="mb-0">Contamos con un amplio repositorio de ex&aacute;menes, lecciones y quizzes para que
+                  puedas repasar por tu cuenta.</p>
+              </div>
+              <div class="col mb-5 mb-md-0 h-100">
+                <div class="feature bg-light-green bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i>
+                </div>
+                <h2 class="h5">Excelente infraestructura</h2>
+                <p class="mb-0">Contamos con varias aulas con tecnolog&iacute; de &uacute;ltimo nivel.</p>
+              </div>
+              <div class="col h-100">
+                <div class="feature bg-light-green bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i>
+                </div>
+                <h2 class="h5">Seguimiento acad&eacute;mico</h2>
+                <p class="mb-0">Priorizamos el aprendizaje del estudiante, para que siempre aprenda el como, por que y
+                  para que.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonial section-->
+    <div class="py-5 bg-light">
+      <div class="container px-5 my-5">
+        <div class="row gx-5 justify-content-center">
+          <div class="col-lg-10 col-xl-7">
+            <div class="text-center">
+              <div class="fs-4 mb-4 fst-italic">"Haber pertenecido a la academia me fue de gran ayuda para reforzar los
+                conocimientos aprendidos en la universidad, ya que de esta manera pude aprobar todos mis cursos con
+                notas muy altas."</div>
+              <div class="d-flex align-items-center justify-content-center">
+                <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                <div class="fw-bold">
+                  Tommy Rodr&iacute;guez
+                  <span class="fw-bold text-primary mx-1">/</span>
+                  Estudiante, UNEMI.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Blog preview section-->
+    <section class="py-5">
+      <div class="container px-5 my-5">
+        <div class="row gx-5 justify-content-center">
+          <div class="col-lg-8 col-xl-6">
+            <div class="text-center">
+              <h2 class="fw-bolder">De nuestra P&aacute;gina</h2>
+              <p class="lead fw-normal text-muted mb-5">Así tambi&eacute;n, realizamos publicaciones acerca de las dudas
+                que tengan los estudiantes sobre procesos estudiantiles o procesos de admisi&oacute;n.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- Footer-->
+  <footer class="bg-green py-4 mt-auto">
+    <div class="container px-5">
+      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+        <div class="col-auto">
+          <div class="small m-0 text-white">Copyright &copy; Academia ANOY 2023</div>
+        </div>
+        <div class="col-auto">
+          <a class="link-light small" href="#!">Privacidad</a>
+          <span class="text-white mx-1">&middot;</span>
+          <a class="link-light small" href="#!">T&eacute;rminos y condiciones</a>
+          <span class="text-white mx-1">&middot;</span>
+          <a class="link-light small" href="#!">Contacto</a>
+          <span class="text-white mx-1">&middot;</span>
+          <a class="link-light small" href="#!">Privacidad de los datos</a>
+        </div>
+      </div>
+    </div>
   </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
 </body>
+
 </html>
