--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </a>
           </div>
           <div class="u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Curriculum-Vitae.html" style="padding: 10px 20px;">Inicio</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://lalitard.github.io/Curriculum/" style="padding: 10px 20px;">Inicio</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#sec-e105" style="padding: 10px 20px;">Acerca de</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#carousel_88d1" style="padding: 10px 20px;">Contacto</a>
 </li></ul>
@@ -55,7 +55,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Curriculum-Vitae.html">Inicio</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://lalitard.github.io/Curriculum/">Inicio</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#sec-e105">Acerca de</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="#carousel_88d1">Contacto</a>
 </li></ul>
